# explore-tauri-sqlite

./: README.md  package-lock.json  package.json
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-08-20-133111_todos/: up.sql
src-tauri/src/: db.rs  main.rs
src-tauri/src/todos/: models.rs  queries.rs
